--- a/requirements.txt
+++ b/requirements.txt
@@ -115,7 +115,7 @@ soupsieve==2.3.2.post1
 srsly==2.4.6
 stack-data==0.6.2
 statsmodels==0.13.5
-streamlit==1.22.0
+streamlit>==1.22.0,<1.25.0
 tangled-up-in-unicode==0.2.0
 tenacity==8.1.0
 tensorboard==2.12.0
